apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@telemetry_otlp_tracing_sampler.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  apollo: {}
