apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@traffic_shaping_deduplicate_variables.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
traffic_shaping: {}
