apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@zipkin_enabled.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  tracing:
    zipkin:
      endpoint: default
      enabled: true

